# vibe-validator

./: .env.example  README.md  pyproject.toml  requirements.txt
tests/: __init__.py  test_analyzer.py  test_models.py  test_routes.py  test_scaffold.py
vibe_validator/: __init__.py  analyzer.py  main.py  models.py  prompts.py
vibe_validator/templates/: error.html  index.html  report.html
